<resources>
    <string name="app_name">My Challenge</string>
    <string name="search">Cari layanan, makanan &amp; tujuan</string>
    <string name="history">Klik &amp; cek riwayat</string>
    <string name="pay">Bayar</string>
    <string name="add">Isi saldo</string>
    <string name="eksplor">Eksplor</string>
    <string name="goride">GoRide</string>
    <string name="gocar">GoCar</string>
    <string name="gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="gomart">GoMart</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="checkin">CheckIn</string>
    <string name="lainnya">Lainnya</string>
    <string name="xp">193 XP lagi ada Harta Karun</string>
    <string name="treasure">Harta Karun bentar lagi hilang</string>
    <string name="akses">Akses Cepat</string>
    <string name="voucher">Ada voucher nganggur, nih</string>
    <string name="resto">Restoran terdekat</string>
    <string name="addvertisement">Festival idaman perempuan! 😍</string>
    <string name="desc_addvertisement">Temukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%. Klik! 👈</string>
    <string name="beranda">Beranda</string>
    <string name="promo">Promo</string>
    <string name="order">Pesanan</string>
    <string name="chat">Chat</string>
    <string name="text_search">Cari powerbank</string>

</resources>